[fix] resolved word wrapping issue for long English text

--- a/css/post-show.css
+++ b/css/post-show.css
@@ -216,10 +216,16 @@ p {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     white-space: pre-wrap;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    word-break: break-all;
 }
 
 article.content {
     white-space: pre-wrap; /* 줄바꿈과 공백을 모두 유지 */
+    overflow-wrap: break-word;
+    word-break: break-word;
+    word-break: break-all;
 }
 
 .like-count {
